added new routes to display data from db.

--- a/app/views/test/index.html.erb
+++ b/app/views/test/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Tests</h1>
 
 <ul>
+	<li><a href="display_users">Display all users in the database</a>
+	<li><a href="display_settings">Display all settings in the database</a>
 	<li><a href="auth_cloudspokes">Authenticate - CloudSpokes</a> (user)
 	<li><a href="auth_thirdparty">Authenticate - Third Party</a> (user)
 	<li><a href="get_current_access_token">Get current_access_token</a> (application controller)
