added account functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
       <h1 id='logo'><%= link_to "CloudSpokes", "/" %></h1>
       <nav id='menu'><ul>
         <li><%= link_to "Members", "#" %></li>
-        <li><%= link_to "Challenges", "/challenges/index" %></li>
+        <li><%= link_to "Challenges", "/challenges" %></li>
         <li><%= link_to "Badges", "#" %></li>
-        <li><%= link_to "Account", "#" %></li>
+        <li><%= link_to "Account", "/account" %></li>
       </ul></nav>
       <nav id='side_menu'><ul>
         <li><%= link_to "How it Works", content_path("about") %></li>
