added new challenge functionality

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -174,3 +174,8 @@ a.btn
     padding: 15px 20px
 
 @import "content"
+
+.field_with_errors 
+  padding: 2px
+  background-color: red
+  display: table
