--- a/app/views/account/index.html.erb
+++ b/app/views/account/index.html.erb
@@ -4,6 +4,7 @@
 <ul>
 	<li><a href="/account/details">Edit Details</a>
 	<li><a href="/account/schoolwork">Edit School and Work</a>
+	<li><a href="/scoring">Outstainding Reviews</a>
 </ul>
 
 <%= debug @member %>
