--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -1,4 +1,125 @@
-<h1>Challenges</h1>
+        <div class="page">
+            <h1 id="heading">
+                Challenges</h1>
+            <div class="categories">
+              
+                    <table cellspacing="0" border="0" style="border-collapse:collapse;">
+	<tr>
+		<td>
+                            <li class="active"><a href="#"><span class="brown">Salesforce.com</span></a></li>
+                        </td><td>
+                            <li class="active"><a href="#"><span class="blue">Google</span></a></li>
+                        </td><td>
+                            <li class="active"><a href="#"><span class="pink">AWS</span></a></li>
+                        </td><td>
+                            <li class="active"><a href="#"><span class="yellow">Heroku</span></a></li>
+                        </td><td>
+                            <li class="active"><a href="#"><span class="light-blue">Mobile</span></a></li>
+                        </td><td>
+                            <li class="active"><a href="#"><span class="red">Twilio</span></a></li>
+                        </td><td>
+                            <li class="active"><a href="#"><span class="purple">Other</span></a></li>
+                        </td><td>
+                            <li class="active"><a href="#"><span class="brown">Java</span></a></li>
+                        </td><td>
+                            <li class="active"><a href="#"><span class="red">Ruby</span></a></li>
+                        </td><td>
+                            <li class="active"><a href="#"><span class="green">Cloud Foundry</span></a></li>
+                        </td><td>
+                            <li class="active"><a href="#" class="category-selected"><span class="category-selected">all</span></a></li>
+                        </td><td></td>
+	</tr>
+</table>
+      
+            </div>
+        <!-- END Page heading -->
+        <!-- Help Nav -->
+        <div class="help-nav">
+            <!-- Sort -->
+            <div class="sort fl">
+                <ul>
+                    <li>SORT BY</li>
+                    <li>
+                        <a class="ddasc" href="#">title</a></li>
+                    <li>
+                        <a  href="#">type</a></li>
+                    <li>
+                        <a href="#">due</a></li>
+                    <li>
+                        <a href="#">start date</a></li>
+                </ul>
+            </div>
+            <!-- END Sort -->
+            <!-- Sort -->
+            <div class="sort fl">
+                <ul>
+                    <li>SHOW</li>
+                    <li><a href="#" class="active">open</a></li>
+                    <li><a href="#">closed</a></li>
+                </ul>
+            </div>
+            <!-- END Sort -->
+            <!-- Search -->
+            <div id="search">
+                <fieldset>
+                    
+                    <input type="text" class="field blink" title="search challenges" value="search challenges" />
+                    <input type="submit" value="" class="submit notext" />
+                </fieldset>
+            </div>
+            <!-- END Search -->
+        </div>
+        <!-- END Help Nav -->
+        <!-- Content Wrapper -->
+        <div class="content-wrapper">
+            <!-- List Challenges -->
+            <div class="list-challenges full-width-challenges">
+                <!-- Box -->
+                
+                        <div>
 <% @challenges.each do |record| %>
-	<%= record["Name"] %><br/>
+                        <div class="box">
+                            <div class="box-b">
+                                <div class="box-t">
+                                    <div class="col-left fl">
+                                        <h4>
+                                            <a href="/challenges/<%= record["Id"] %>">
+                                                <%= record["Name"] %></a></h4>
+                                        <p><%= record["Description__c"] %></p>
+                                    </div>
+                                    <div class="col-right fr">
+                                        <p>
+                                            <strong>
+                                                <%= record["Top_Prize__c"] %>&nbsp;<!--for-->
+                                            </strong>
+                                            <br />
+                                            <span><%= record["TimeTillEnd"] %> for </span>
+                                            <!--<a href="Profile.aspx?username=jeffdonthemic">
+                                                jeffdonthemic</a>-->
+                                            <br />
+                                            <a href="<%= record["Id"] %>/registrants">
+                                                <%= record["Registered_Members__c"] %>&nbsp;registered members </a>
+                                            
+                                            <br />
+                                             <span><a href='' target="_blank"> </a></span></p>
+                                    </div>
+                                    <div class="cl"></div>
+                                </div>
+                            </div>
+                        </div>
 <% end %>
+                        </div>
+                    
+                
+                <div class="paging fr">
+                    <p class="fr">
+                        <span><a disabled="disabled">First</a>&nbsp;<span class="selected">1</span>&nbsp;<a disabled="disabled">Last</a>&nbsp;</span>
+                    </p>
+                </div>
+                <a href="contests.rss" class="get-rss fl">Get RSS for this
+                    Set</a>
+                <div class="cl">
+                    &nbsp;</div>
+            </div>
+        </div>
+    </div>
