--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>CloudSpokes</title>
   <link href='http://fonts.googleapis.com/css?family=Marvel:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    "application" %>
+  <%= stylesheet_link_tag    "challenge" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
