added in members functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <header id='top'>
       <h1 id='logo'><%= link_to "CloudSpokes", "/" %></h1>
       <nav id='menu'><ul>
-        <li><%= link_to "Members", "#" %></li>
+        <li><%= link_to "Members", members_path %></li>
         <li><%= link_to "Challenges", "/challenges" %></li>
         <li><%= link_to "Badges", "#" %></li>
         <li><%= link_to "Account", "/account" %></li>
