--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -54,6 +54,7 @@ nav ul
   border: 9px solid $border-blue
   border-left: 0
   border-right: 0
+  overflow: auto
 
 #top
   #logo
@@ -174,6 +175,10 @@ a.btn
     padding: 15px 20px
 
 @import "content"
+@import "members"
+@import "member"
+@import "global"
+@import "accounts"
 
 .field_with_errors 
   padding: 2px
