--- a/app/views/content/home.html.erb
+++ b/app/views/content/home.html.erb
@@ -10,6 +10,7 @@
 </section>
 <section class='col3'>
   <div class='col'>
+	Here's the <a href="/leaderboard">leaderboard</a>
   </div>
   <div class='col'>
   </div>
