challenges and member additions

--- a/app/views/challenges/detail.html.erb
+++ b/app/views/challenges/detail.html.erb
@@ -12,32 +12,58 @@
                             <table cellspacing="0" border="0" style="border-collapse:collapse;">
 								<tr>
 									<% @categories.each do |record| %>	
-									<td><li><a href="#"><span><%= record %></span></a></li></td>
+									<td><li><a href="/challenges?category=<%= record %>"><span><%= record %></span></a></li></td>
 									<% end %>                                
 								</tr>
 							</table>
                         </ul>
                     </div>
 
+					<% if !@challenge_detail["Description__c"].nil? %>
                     <h3>Overview</h3>
-                    <p><%= @challenge_detail["Description__c"].html_safe %></p>
+                    <p><%= raw(@challenge_detail["Description__c"])%></p>
+					<% end %>
 
+					<% if !@challenge_detail["Requirements__c"].nil? %>
                     <h3>Challenge Requirements</h3>
-                    <p><%= @challenge_detail["Requirements__c"].html_safe %></p>
+                    <p><%= raw(@challenge_detail["Requirements__c"]) %></p>	
+					<% end %>
 
+					<% if !@challenge_detail["Submission_Details__c"].nil? %>
                     <h3>Submission Details</h3>
-                    <p><%= @challenge_detail["Submission_Details__c"].html_safe %></p>
+                    <p><%= raw(@challenge_detail["Submission_Details__c"]) %></p>
+					<% end %>
 
+					<% if !@challenge_detail["Additional_Info__c"].nil? %>
                     <h3>Additional Info</h3>
-                    <p><%= @challenge_detail["Additional_Info__c"].html_safe %></p>
+                    <p><%= raw(@challenge_detail["Additional_Info__c"]) %></p>
+					<% end %>
 
-                    <!--
-                    <div>
-                        <h3><span>Register or Login to submit for the contest</span></h3>
-                        <a class="button fl" href="register.html"> <span>Register</span></a>
-                        <a class="button fl" href="login.html"> <span>Login</span></a>                        
-                    </div>
-                    -->
+					<% if @challenge_detail["Is_Open__c"].eql?("true") %>
+					<% if signed_in? %>
+	                    <div>
+						<% if @participation_status.eql?('Not Registered') %>
+	                        <a class="button fl" href="<%= @challenge_detail["ID__c"] %>/register?challengeId=<%= @challenge_detail["Id"] %>">
+		 					<span>Register</span></a>
+	                        <a class="button fl" href="<%= @challenge_detail["ID__c"] %>/watch?challengeId=<%= @challenge_detail["Id"] %>">
+							<span>Add to Watch List</span></a>    
+						<% elsif @participation_status.eql?('Watching') %>
+	                        <a class="button fl" href="<%= @challenge_detail["ID__c"] %>/register?challengeId=<%= @challenge_detail["Id"] %>&current_status=Watching">
+		 					<span>Register</span></a>
+						<% elsif @participation_status.eql?('Registered') %>
+	                        <a class="button fl" href="<%= @challenge_detail["ID__c"] %>/submission">
+							<span>Submit Your Entry</span></a>
+						<% end %>                    
+	                    </div>
+					<% else %>
+ 	                   <div>
+	                        <h3><span>Register or Login to submit for the contest</span></h3>
+	                        <a class="button fl" href="<%= @challenge_detail["ID__c"] %>/register"> <span>Register</span></a>
+	                        <a class="button fl" href="/login"> <span>Login</span></a>                        
+	                    </div>
+					<% end %>
+					<% end %>
+
                 </div>
 
                 <!-- END Challenge Information -->
@@ -48,55 +74,7 @@
                 
 				<!-- Challenge Sidebar -->
 				<div class="challenge-sidebar">
-
-    				<ul>
-        				<li><h2><span><%= @challenge_detail["Name"] %></span></h2></li>
-        				<li><h3>Time Left For Submission</h3><h2><span><%= @challenge_detail["TimeTillEnd"] %></span></h2></li>
- 						<li><h3>Top Prize</h3><h2><span><%= @challenge_detail["Top_Prize__c"] %></span></h2></li>
-        				<li><h3>Prizes</h3>
-							<ul>
-								<% @prizes.each do |record| %>                
-                        		<li><span><%= record["Place__c"] %>. <%= record["Prize__c"] %></span><br /></li>
-								<% end %>
-							</ul>
-						</li>
-        				<li><h3>Winner Announced</h3><strong><span><%= Date.parse(@challenge_detail["Winner_Announced__c"]).strftime("%B %e, %Y") %></span></strong></li>
-        
-						<li style="display:block;"><h3>Registered Members</h3>
-            				<a href="<%= @challenge_detail["Id"] %>/registrants"><strong>
-								<span><%= @challenge_detail["Registered_Members__c"].to_i %> Registered Member(s)</span></strong></a>
-						</li>
-        				<li>
-            				<h3>Delivery Formats</h3>
-            				<ul>
-			                HTML, Word, Google Doc, Text, RTF, Other: Upload a text document with details on
-			                how to retrieve your submission.
-			                <li><strong>HTML</strong></li>
-			                <li><strong>Word</strong></li>
-			                <li><strong>Google Doc</strong></li>
-			                <li><strong>Text</strong></li>
-			                <li><strong>RT</strong></li>
-			                <li><strong>Other:</strong> Upload a text document<br />with details on how to retrieve<br />your submission.</li>
-            				</ul>
-        				</li>
-        				<li><h3>Assets</h3>
-							<ul>
-                				<li><strong><span style="width: 300px; text-align: left">No asset(s) found for this challenge.<br /><br /></span></strong></li>
-                    		</ul>
-						</li>
-        				<li>
-            				<h3>Share</h3>
-				            <!-- AddThis Button BEGIN -->
-				            <div class="addthis_toolbox addthis_default_style ">
-				                <a class="addthis_button_facebook_like"><fb:like:layout="button_count"></fb:like></a><a class="addthis_button_tweet"></a>
-				                <a class="addthis_counter addthis_pill_style"></a>
-				            </div>
-				            <script type="text/javascript">                var addthis_config = { "data_track_clickback": true };</script>
-				            <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=mess"></script>
-				            <!-- AddThis Button END -->
-							<div class="cl">&nbsp;</div>
-						</li>
-					</ul>
+				<%= render "challenge-sidebar" %>
 				</div>
 				<!-- END Challenge Sidebar -->
 
