--- a/app/views/challenges/results.html.erb
+++ b/app/views/challenges/results.html.erb
@@ -7,33 +7,38 @@
                 <span></span>
 				<p><%= link_to "Back", challenge_path %></p>
 
-				<% if @registrants.size == 0 %>
+				<% if @winners.size == 0 %>
 					<div style="text-align: center; padding:50px"><b> No registrants for this challenge at this time.</b></div>
 				<% else %>
-					<h3>Registrants</h3>
+					<h3>Winners</h3>
 					<!-- List Members -->
 	                <div class="list-members">
-						<% @registrants.each do |record| %>
-						<div class="box">
-							<div class="box-b">
-								<div class="box-t">
-									<div class="user-info fl">
-	                             		<a href='#'><img class="member-pic" src="<%= record["Member__r"]["Profile_Pic__c"] %>" style="height:48px;width:48px;border-width:0px;" /></a>
-										<div class="text-holder">
-											<h4><a href='#'><%= record["Member__r"]["Name"] %></a></h4>
-											<span class="stats"># of Wins: <%= record["Member__r"]["Total_Wins__c"] %></span>
+						<% @winners.each do |record| %>
+							<% if !record["Place__c"].nil? %>
+							<div class="box">
+								<div class="box-b">
+									<div class="box-t">
+										<div class="user-info fl">
+		                             		<a href='/members/<%= record["Member__r"]["Name"] %>'><img class="member-pic" src="<%= record["Member__r"]["Profile_Pic__c"] %>" style="height:48px;width:48px;border-width:0px;" /></a>
+											<div class="text-holder">
+												<h4><a href='/members/<%= record["Member__r"]["Name"] %>'><%= record["Member__r"]["Name"] %></a></h4>
+												<span class="stats">Place: <%= record["Place__c"] %></span>
+												<span class="stats">Points: <%= record["Points_Awarded__c"] %></span>
+												<span class="stats">Money: $<%= record["Money_Awarded__c"].to_i %></span>
+											</div>
+											<div class="cl"></div>
+										</div>
+										<div class="user-desc fr">
+											<p><strong>About Me:</strong>
+											<%= record["Member__r"]["Summary_Bio__c"] %>
+											<a href='/members/<%= record["Member__r"]["Name"] %>'>View Profile</a></p>
 										</div>
 										<div class="cl"></div>
 									</div>
-									<div class="user-desc fr">
-										<p><strong>About Me:</strong>
-										<a href='#'>View Profile</a></p>
-									</div>
-									<div class="cl"></div>
 								</div>
 							</div>
-						</div>
-						<% end %>                     
+							<% end %>
+						<% end %>            
                         
 	                    <div class="cl"></div>
 	                    <!-- Paging -->
