--- a/app/views/challenges/detail.html.erb
+++ b/app/views/challenges/detail.html.erb
@@ -64,9 +64,55 @@
 					<% end %>
 					<% end %>
 
-                </div>
+                </div><br/>
 
                 <!-- END Challenge Information -->
+
+                <!-- Discussion -->
+                <div class="discussion recommendations">
+                    <h2>Discussion</h2>
+                    <!-- Box -->
+                    <!-- Box -->
+                    <%= render "discussion_box" %>
+                    <!-- END Box -->
+
+                    <!-- Reply Post -->
+                    <%= render "discussion_box_reply" %>
+                    <!-- END Reply Post -->
+
+                    <div style="text-align: center"></div>
+                    <!-- END Box -->
+                    <!-- Post Comment -->
+                    <div class="post-comment">
+                        <h3>Post a Comment</h3>
+                        <fieldset>
+                            <span id="ctl00_Body_lblDiscussion"></span>
+                            <span id="ctl00_Body_rfvUserName" style="color:Red;visibility:hidden;">Please specify comment</span><br />
+                            <span id="ctl00_Body_revQuote" style="color:Red;visibility:hidden;">You cannot enter more than 5000 characters</span>
+                            <div class="holder"><textarea name="ctl00$Body$txtComment" rows="8" cols="20" id="ctl00_Body_txtComment" cols="40"></textarea></div>
+                            <div>
+                                <div class="codelbl">Enter code:</div>
+                                <div class="captchaCode">
+                                    <input name="ctl00$Body$txtCaptchCode" type="text" maxlength="6" id="ctl00_Body_txtCaptchCode" class="field" style="height:20px;" />
+                                </div>
+                                <div class="captcha">
+                                    <img id="ctl00_Body_imgCaptcha" src="JpegImage.aspx?id=1a665a18-59bf-4a77-a02f-152fba2a1bb2" style="border-width:0px;" />
+                                </div>
+                                <div class="captchaRefresh">
+                                    <a onclick="javascript:refresh();return false;" id="ctl00_Body_lnkRefresh" href="javascript:__doPostBack(&#39;ctl00$Body$lnkRefresh&#39;,&#39;&#39;)">Refresh</a></div>
+                                <div class="cl">
+                                </div>
+                            </div>
+                            <a id="ctl00_Body_lnkComment" class="button" href="javascript:WebForm_DoPostBackWithOptions(new WebForm_PostBackOptions(&quot;ctl00$Body$lnkComment&quot;, &quot;&quot;, true, &quot;Comment&quot;, &quot;&quot;, false, true))">
+                                <span>Post</span></a>
+                            <div class="cl">&nbsp;</div>
+                        </fieldset>
+                    </div>
+                    <!-- END Post Comment -->
+                </div>
+                <!-- END Discussion -->
+
+
             </div>
             <!-- END Widecolumn -->
             <!-- Sidebar -->
