--- a/app/views/test/index.html.erb
+++ b/app/views/test/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Tests</h1>
 
 <ul>
+	<li><a href="s3">S3</a>
 	<li><a href="display_users">Display all users in the database</a>
 	<li><a href="display_settings">Display all settings in the database</a>
 	<li><a href="dump_env">Dump ENV variables</a>
